syncroot/base/umbraco-kinorge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umbraco-kinorge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: umbraco-kinorge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: umbraco-kinorge
        azure.workload.identity/use: "true"
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: umbraco-kinorge
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: umbraco-kinorge
          image: umbraco-kinorge:1
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: umbraco-kinorge-data
              mountPath: /app/umbraco/Data
            - name: umbraco-kinorge-media
              mountPath: /app/wwwroot/media
            - name: umbraco-kinorge-logs
              mountPath: /app/umbraco/Logs
      volumes:
        - name: umbraco-kinorge-data
          persistentVolumeClaim:
            claimName: umbraco-kinorge-data
        - name: umbraco-kinorge-media
          persistentVolumeClaim:
            claimName: umbraco-kinorge-media
        - name: umbraco-kinorge-logs
          emptyDir: {}
