syncroot/base/umbraco-kinorge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umbraco-kinorge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: umbraco-kinorge
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
