syncroot/base/umbraco-kinorge/network-policies.yaml
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: umbraco-kinorge-http-route
spec:
  parentRefs:
    - name: umbraco-kinorge-http-server
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: umbraco-kinorge-http-auth
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: umbraco-kinorge-http-route
  requiredAuthenticationRefs:
    - name: traefik
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
